--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -12,6 +12,10 @@
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
 
+        <ImageView
+            android:src="@drawable/lovelife"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"/>
         <TextView
             android:layout_marginTop="20dp"
             android:id="@+id/noidung"
